Fix news spacing

--- a/assets/sass/_news.scss
+++ b/assets/sass/_news.scss
@@ -35,13 +35,13 @@
                     display: none;
                 }
 
-                br + br + br {
-                    display: none
-                }
-
-                p:empty + p:empty {
-                    display: none;
-                }
+                //br + br + br {
+                //    display: none
+                //}
+                //
+                //p:empty + p:empty {
+                //    display: none;
+                //}
             }
         }
 
